# pywebengine

./: README.md  aidesktop.py  change_sheets_title.py  change_sheets_title_auto.py  google_sheets_automation.py  index.html  main.py  pyproject.toml  simple_sheets_demo.py
.cursor/: mcp.json
docs/: prd.md  test_scenario.md  test_scenario_advanced.md
src/mcp_desktop/: __init__.py  __main__.py  cli.py  filesystem.py  keyboard.py  mouse.py  ocr.py  resources.py  screen_indexer.py  screenshot.py  security.py  server.py  smart_indexer.py  tools.py  utils.py  window.py
